--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <a class="navbar-brand d-flex align-items-center" href="homepages.html">
         <img src="images/logo.png" alt="Logo" class="navbar-logo me-2">
         Hoang Computer
       </a>
@@ -27,15 +27,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="homepages.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li> -->
           <li class="nav-item position-relative">
             <a class="nav-link" href="checkout.html">
               <i class="fas fa-shopping-cart"></i>
