--- a/login.html
+++ b/login.html
@@ -13,41 +13,7 @@
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="images/logo.png" alt="Logo" class="navbar-logo me-2">
-                Hoang Computer
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item position-relative">
-                        <a class="nav-link" href="checkout.html">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-badge" id="cartBadge">0</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <!-- Login Form -->
     <div class="container login-container">
         <div class="row justify-content-center">
@@ -86,7 +52,7 @@
                             </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="rememberMe">
-                                <label class="form-check-label" for="rememberMe">Remember me</label>
+                                <label class="form-check-label" for="rememberMe" required>Remember me</label>
                             </div>
                             <button type="submit" class="btn login-btn">Login</button>
                             <div class="social-login">
@@ -109,16 +75,11 @@
             </div>
         </div>
     </div>
-    <div id="footerContainer"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/auth.js"></script>
     <script src="./js/login.js"></script>
     <!-- <script src="./js/cart.js"></script>  -->
-    <script>
-        fetch('footer.html')
-            .then(res => res.text())
-            .then(html => document.getElementById('footerContainer').innerHTML = html);
-    </script>
 </body>
 
 </html>
