--- a/register.html
+++ b/register.html
@@ -15,39 +15,6 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="images/logo.png" alt="Logo" class="navbar-logo me-2">
-        Hoang Computer
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item position-relative">
-            <a class="nav-link" href="checkout.html">
-              <i class="fas fa-shopping-cart"></i>
-              <span class="cart-badge" id="cartBadge">0</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">Login</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
   <!-- Register Form -->
   <div class="container register-container">
     <div class="row justify-content-center">
@@ -108,6 +75,36 @@
                   Password must be at least 8 characters long and contain uppercase, lowercase, numbers, and special
                   characters.
                 </div>
+                <!-- Password Requirements Container -->
+                <div id="password-requirements" class="password-requirements mt-2" style="display: none;">
+                  <div class="card border-light">
+                    <div class="card-body p-3">
+                      <h6 class="card-title mb-2">Password Requirements:</h6>
+                      <div class="requirement-list">
+                        <div id="req-length" class="requirement-item text-muted d-flex align-items-center mb-1">
+                          <span class="req-icon me-2"><i class="fas fa-minus-circle"></i></span>
+                          At least 8 characters
+                        </div>
+                        <div id="req-uppercase" class="requirement-item text-muted d-flex align-items-center mb-1">
+                          <span class="req-icon me-2"><i class="fas fa-minus-circle"></i></span>
+                          At least one uppercase letter (A-Z)
+                        </div>
+                        <div id="req-lowercase" class="requirement-item text-muted d-flex align-items-center mb-1">
+                          <span class="req-icon me-2"><i class="fas fa-minus-circle"></i></span>
+                          At least one lowercase letter (a-z)
+                        </div>
+                        <div id="req-number" class="requirement-item text-muted d-flex align-items-center mb-1">
+                          <span class="req-icon me-2"><i class="fas fa-minus-circle"></i></span>
+                          At least one number (0-9)
+                        </div>
+                        <div id="req-special" class="requirement-item text-muted d-flex align-items-center mb-1">
+                          <span class="req-icon me-2"><i class="fas fa-minus-circle"></i></span>
+                          At least one special character (!@#$%^&*)
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirm Password</label>
@@ -140,16 +137,11 @@
       </div>
     </div>
   </div>
-  <div id="footerContainer"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="./js/auth.js"></script>
   <script src="./js/register.js"></script>
   <!-- <script src="./js/cart.js"></script> -->
-  <script>
-    fetch('footer.html')
-      .then(res => res.text())
-      .then(html => document.getElementById('footerContainer').innerHTML = html);
-  </script>
 </body>
 
 </html>
