--- a/admin/ordermanagement.html
+++ b/admin/ordermanagement.html
@@ -38,7 +38,7 @@
                         <span class="material-symbols-outlined mr-2">dashboard</span>
                         Dashboard
                     </a>
-                    <a href="managementproduct.html" class="nav-link">
+                    <a href="productmanagement.html" class="nav-link">
                         <span class="material-symbols-outlined mr-2">inventory_2</span>
                         Product Management
                     </a>
