update new last ..

--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
 
       <!-- Contact Form -->
       <div class="col-12 col-lg-8 h-100 d-flex flex-column">
-        <h3 class="section-title text-center text-lg-start">Send us a message</h3>
+        <h3 class="section-title section-title-center-underline">Send us a message</h3>
         <div class="contact-form-card flex-grow-1 d-flex flex-column">
           <div class="card-body p-4 p-lg-5 flex-grow-1 d-flex flex-column">
             <form id="contactForm" class="d-flex flex-column h-100">
