update new lastt.

--- a/admin/accountmanagement.html
+++ b/admin/accountmanagement.html
@@ -64,8 +64,11 @@
                     <div class="flex gap-3 items-center">
                         <div class="relative">
                             <input type="text" id="searchInput" placeholder="Search accounts..." 
-                                class="px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 w-64">
-                            <span class="material-symbols-outlined absolute right-3 top-2.5 text-gray-400">search</span>
+                                class="px-4 py-2 border border-gray-300 rounded-lg 
+                                    focus:ring-2 focus:ring-blue-500 focus:border-blue-500 w-64">
+                            <span class="material-symbols-outlined absolute right-3 top-2.5 text-gray-400">
+                                search
+                            </span>
                         </div>
                         <button class="custom-btn custom-btn-secondary" onclick="openAddAccountModal()">
                             <span class="material-symbols-outlined text-sm">add</span>
