--- a/admin/ordermanagement.html
+++ b/admin/ordermanagement.html
@@ -29,7 +29,6 @@
                     <h1 class="text-3xl font-bold text-gray-800">Admin Panel</h1>
                     <p class="text-gray-500 mt-1">Welcome back, <span id="adminName">Admin</span>!</p>
                 </div>
-               
             </div>
             <!-- Navigation -->
             <div class="border-b border-gray-200">
@@ -62,10 +61,14 @@
                     <div class="flex gap-3 items-center">
                         <div class="relative">
                             <input type="text" id="searchInput" placeholder="Search orders..." 
-                                class="px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 w-64">
-                            <span class="material-symbols-outlined absolute right-3 top-2.5 text-gray-400">search</span>
+                                class="px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 
+                                focus:ring-blue-500 focus:border-blue-500 w-64">
+                            <span class="material-symbols-outlined absolute right-3 top-2.5 text-gray-400">
+                                search
+                            </span>
                         </div>
-                        <select id="statusFilter" class="px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                        <select id="statusFilter" class="px-4 py-2 border border-gray-300 rounded-lg 
+                            focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                             <option value="">All Status</option>
                             <option value="Pending">Pending</option>
                             <option value="Processing">Processing</option>
