--- a/homepages.html
+++ b/homepages.html
@@ -48,14 +48,25 @@
                         <a class="nav-link" href="login.html" id="authNavLink">Login</a>
                     </li>
                     <li class="nav-item dropdown" id="userDropdown" style="display: none;">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdownToggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdownToggle" role="button" 
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user"></i>
                             <span id="userName">User</span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="userDropdownToggle">
-                            <li><a class="dropdown-item" href="profile.html"><i class="fas fa-user me-2"></i>Profile</a></li>
+                            <li>
+                                <a class="dropdown-item" href="profile.html">
+                                    <i class="fas fa-user me-2"></i>
+                                    Profile
+                                </a>
+                            </li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#" onclick="logout()"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
+                            <li>
+                                <a class="dropdown-item" href="#" onclick="logout()">
+                                <i class="fas fa-sign-out-alt me-2"></i>
+                                Logout
+                                </a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
