--- a/admin/ordermanagement.html
+++ b/admin/ordermanagement.html
@@ -29,6 +29,12 @@
                     <h1 class="text-3xl font-bold text-gray-800">Admin Panel</h1>
                     <p class="text-gray-500 mt-1">Welcome back, <span id="adminName">Admin</span>!</p>
                 </div>
+                <div class="mt-4 sm:mt-0 flex gap-2">
+                    <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg transition-colors">
+                        <span class="material-symbols-outlined inline-block mr-1 text-lg">logout</span>
+                        Logout
+                    </button>
+                </div>
             </div>
             <!-- Navigation -->
             <div class="border-b border-gray-200">
