--- a/products.html
+++ b/products.html
@@ -73,8 +73,8 @@
                     <div class="row justify-content-center">
                         <div class="col-md-8">
                             <div class="d-flex flex-wrap gap-2 justify-content-center category-btn-group">
-                                <button class="btn btn-outline-primary category-btn" onclick="filterProducts('all')">All
-                                    Products</button>
+                                <button class="btn btn-outline-primary category-btn" 
+                                    onclick="filterProducts('all')">All Products</button>
                                 <button class="btn btn-outline-primary category-btn"
                                     onclick="filterProducts('laptop')">Laptops</button>
                                 <button class="btn btn-outline-primary category-btn"
